<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_view_notifications"
        android:icon="@drawable/menu_view_notifications"
        android:title="@string/ver_notificaciones" />

    <item
        android:id="@+id/menu_delete_notifications"
        android:icon="@drawable/menu_delete_notifications"
        android:title="@string/borrar_notificaciones" />

    <item
        android:id="@+id/menu_login"
        android:icon="@drawable/menulogin"
        android:visible="false"
        android:title="@string/iniciar_sesion" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/menulogout"
        android:visible="false"
        android:title="@string/cerrar_sesion" />

    <item
        android:id="@+id/menu_exit_app"
        android:icon="@drawable/menuexit"
        android:title="@string/salir_aplicacion" />
</menu>